--- a/style.css
+++ b/style.css
@@ -1,25 +1,7 @@
-body{
-	background-color: #f0f0f0;
+.formulario{
+	height: 100vh;
 	display: flex;
-	font-family: Arial, sans-serif;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
-	margin: 0;
-}
-
-div{
-	display: flex;
-	flex-direction: row;
-
-}
-img{
-	height: 80px;
-	width: 80px;
-}
-p{
-	font-size: 1.5rem;
-	background-color: red;
-	color: white;
-	display: flex;
 }
